# picow_co2_sensor

./: .gitmodules  Makefile
app/: CMakeLists.txt  main.c
app/i2c/: i2c.c  i2c.h
app/network/: wifi.c  wifi.h
app/scd40/: scd40.c  scd40.h
app/ssd1306/: ssd1306.c  ssd1306.h
app/tasks/: read_data_task.c  update_display_task.c
config/: FreeRTOSConfig.h
tests/: test_update_display_task.c
